Bug #24633 SQL MODE "NO_DIR_IN_CREATE" does not work with partitioned tables" We have to ignore 'data directory' and 'index directory' parameters if NO_DIR_IN_CREATE set.